--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
      margin: 0;
      padding: 0;
 }
-.button{
-    background-color: aquamarine;
-}
+a {
+    text-decoration: none;
+    border: 0.2px solid #000;
+    color: #000;
+    background: #e6e4e4;
+    padding: 5px;
+    border-radius: 1px;
+  }
