--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a {
     text-decoration: none;
     border: 0.2px solid #000;
     color: #000;
-    background: #e6e4e4;
+    background: #2e4fb2;
     padding: 5px;
     border-radius: 1px;
   }
