--- a/style.css
+++ b/style.css
@@ -13,10 +13,16 @@
      padding: 0;
 }
 a {
+    height:50px;
+    width:50px;
     text-decoration: none;
     border: 0.2px solid #000;
-    color: #000;
+    color: white;
     background: #2e4fb2;
     padding: 5px;
-    border-radius: 1px;
+    border-radius: 50%;
+    position: absolute;
+    left: 600px;
+    top: 460px;
+    text-align: center;
   }
