--- a/style.css
+++ b/style.css
@@ -16,13 +16,24 @@ a {
     height:50px;
     width:50px;
     text-decoration: none;
-    border: 0.2px solid #000;
-    color: white;
-    background: #2e4fb2;
     padding: 5px;
-    border-radius: 50%;
+    border-radius: 100%;
     position: absolute;
     left: 600px;
     top: 460px;
+    
+    font-size: 18px;
     text-align: center;
+    
+    background-color: black;
+
+    border: 0.0px solid red;
+    
+    color: white;
+    padding: 8px;
+
+    box-shadow: 0 0 30px 0 crimson,
+                    0 0 30px 0 crimson,
+                    0 0 10px 0 crimson inset;
   }
+  
